--- a/templates/task_manager/project_detail.html
+++ b/templates/task_manager/project_detail.html
@@ -7,9 +7,9 @@
 {% block content %}
 	<h1>
     Project information
-    <a href="{% url 'task_manager:project_create' %}" class="link-to-page">+</a>
+    <a href="{% url 'task_manager:project-create' %}" class="link-to-page">+</a>
   </h1>
   <p>Very big information</p>
   <br>
-  <a href="{% url 'task_manager:project_delete' pk=project.id %}" class="btn btn-danger">Delete project</a>
+  <a href="{% url 'task_manager:project-delete' pk=project.id %}" class="btn btn-danger">Delete project</a>
 {% endblock %}
