--- a/templates/task_manager/project_detail.html
+++ b/templates/task_manager/project_detail.html
@@ -5,11 +5,56 @@
 {% endblock %}
 
 {% block content %}
-	<h1>
-    Project information
-    <a href="{% url 'task_manager:project-create' %}" class="link-to-page">+</a>
-  </h1>
-  <p>Very big information</p>
+  <div class="container-fluid py-4">
+    <div class="row">
+      <div class="col-12 col-lg-10">
+        <div class="card">
+          <div class="card-header pb-0 p-3">
+            <div class="d-flex justify-content-between">
+              <h5 class="mb-0">Project: {{ project.name }}</h5>
+              <div class="d-inline-block ms-auto">
+                <a href="{% url 'task_manager:project-task-create' project_pk=project.id %}" class="btn btn-link btn-sm">add task</a>
+                <a href="{% url 'task_manager:project-delete' pk=project.id %}"
+                    class="btn btn-link btn-sm" style="color: red">
+                  Delete project
+                </a>
+              </div>
+            </div>
+            <p class="text-sm mb-0 mt-2">
+              {{ project.description }}
+            </p>
+          </div>
+          <div class="table-responsive">
+            <table class="table table-flush" id="datatable-basic">
+              <thead class="thead-light">
+                <tr>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-10">Name</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-10">Assignees</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-10">Deadline</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-10">Priority</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-10">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for task in project.tasks.all %}
+                <tr>
+                  <td class="text-sm font-weight-normal">
+                    <a href="{% url 'task_manager:task-detail' pk=task.id %}">{{ task.name }}</a>
+                  </td>
+                  <td class="text-sm font-weight-normal">{{ task.assignees.all|join:", " }}</td>
+                  <td class="text-sm font-weight-normal">{{ task.deadline }}</td>
+                  <td class="text-sm font-weight-normal">{{ task.priority }}</td>
+                  <td class="text-sm font-weight-bolder">
+                    {% if task.is_complete %}Complete{% else %}In work{% endif %}
+                  </td>
+                </tr>
+              {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <br>
-  <a href="{% url 'task_manager:project-delete' pk=project.id %}" class="btn btn-danger">Delete project</a>
 {% endblock %}
