feat: added Font Awesome CSS icons to head

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -12,6 +12,9 @@
 <!-- Nucleo Icons -->
 <link href="{% static 'assets/css/nucleo-icons.css' %}" rel="stylesheet" />
 <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet" />
+<!-- Font Awesome CSS (for <i class="fas ..."> icons) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <!-- Font Awesome Icons -->
 <script src="{% static "assets/js/plugins/fontawesome.min.js" %}"></script>
 <!-- CSS Files -->
