--- a/templates/task_manager/project_list.html
+++ b/templates/task_manager/project_list.html
@@ -73,6 +73,9 @@
                 </table>
               </div>
             </div>
+            {% block pagination %}
+              {% include "includes/pagination.html" %}
+            {% endblock %}
           </div>
         </div>
       </div>
