--- a/templates/task_manager/task_list.html
+++ b/templates/task_manager/task_list.html
@@ -63,6 +63,9 @@
               </table>
             </div>
           </div>
+          {% block pagination %}
+            {% include "includes/pagination.html" %}
+          {% endblock %}
         </div>
       </div>
     </div>
