--- a/templates/task_manager/team_list.html
+++ b/templates/task_manager/team_list.html
@@ -15,7 +15,6 @@
               <a href="{% url 'task_manager:team-create' %}" class="text-sm text-primary">Add team</a>
             </div>
           </div>
-    
           <div class="table-responsive">
             <table class="table align-items-center">
               <thead>
@@ -62,67 +61,11 @@
               </tbody>
             </table>
           </div>
+          {% block pagination %}
+            {% include "includes/pagination.html" %}
+          {% endblock %}
         </div>
       </div>
     </div>
   </div>
-{#<div class="row mt-4">#}
-{#  <div class="col-12 col-lg-10">#}
-{#    <div class="card">#}
-{#      <div class="card-header pb-0 p-3">#}
-{#        <div class="d-flex justify-content-between">#}
-{#          <h6 class="mb-2">Teams</h6>#}
-{#          <a href="{% url 'task_manager:team-create' %}">+</a>#}
-{#        </div>#}
-{#      </div>#}
-{##}
-{#      <div class="table-responsive">#}
-{#        <table class="table align-items-center">#}
-{#          <thead>#}
-{#            <tr>#}
-{#              <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7">Team name</th>#}
-{#              <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 text-center">Worker count</th>#}
-{#              <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 text-center">Project count</th>#}
-{#              <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 text-center">Actions</th>#}
-{#            </tr>#}
-{#          </thead>#}
-{#          <tbody>#}
-{#            {% for team in team_list %}#}
-{#            <tr>#}
-{#              <td class="w-30">#}
-{#                <div class="d-flex px-2 py-1 align-items-center">#}
-{#                  <div class="ms-4">#}
-{#                    <h6 class="text-sm mb-0">#}
-{#                      <a href="{% url 'task_manager:team-detail' pk=team.id %}">{{ team.name }}</a>#}
-{#                    </h6>#}
-{#                  </div>#}
-{#                </div>#}
-{#              </td>#}
-{#              <td class="text-center">#}
-{#                <h6 class="text-sm mb-0">{{ team.members.count }}</h6>#}
-{#              </td>#}
-{#              <td class="text-center">#}
-{#                <h6 class="text-sm mb-0">{{ team.projects.count }}</h6>#}
-{#              </td>#}
-{#              <td class="align-middle text-sm text-center">#}
-{#                <a href="{% url 'task_manager:team-update' pk=team.id %}"#}
-{#                   class="btn btn-link text-primary p-0 mt-3 me-1">#}
-{#                  Update#}
-{#                </a>#}
-{#                <button class="btn btn-link text-danger ps-0 mt-3 me-0 ms-2"#}
-{#                        data-bs-toggle="modal"#}
-{#                        data-bs-target="#confirmModal"#}
-{#                        data-message="Delete team: {{ team.name }}"#}
-{#                        data-action="{% url 'task_manager:team-delete' pk=team.id %}">#}
-{#                  Delete#}
-{#                </button>#}
-{#              </td>#}
-{#            </tr>#}
-{#            {% endfor %}#}
-{#          </tbody>#}
-{#        </table>#}
-{#      </div>#}
-{#    </div>#}
-{#  </div>#}
-{#</div>#}
 {% endblock %}
