--- a/templates/task_manager/position_form.html
+++ b/templates/task_manager/position_form.html
@@ -6,12 +6,22 @@
 {% endblock %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update,Create" }} position</h1>
-	<form action="" method="post" novalidate>
-    {% csrf_token %}
-    {{ form|crispy }}
-  
-    <input type="submit" value="Create" class="btn btn-primary">
-    <a href="{% url 'task_manager:position-list' %}" class="btn btn-danger">Back</a>
-  </form>
+<div class="container py-4">
+  <div class="row">
+    <div class="col-lg-6 mx-auto">
+      <div class="card">
+        <div class="card-header pb-0 p-3">
+          <h6 class="mb-0">{{ view.object.pk|yesno:"Edit Position,Add Position" }}</h6>
+        </div>
+        <div class="card-body p-3">
+          <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
