--- a/templates/task_manager/project_list.html
+++ b/templates/task_manager/project_list.html
@@ -8,6 +8,23 @@
   <div class="container-fluid py-4">
     <div class="row">
         <div class="col-12 col-lg-10">
+          <form method="get" action="" class="mb-4">
+            <div class="input-group input-group-lg">
+              <input 
+                type="text" 
+                name="query" 
+                class="form-control" 
+                placeholder="Search projects by name..." 
+                value="{{ request.GET.query }}"
+                style="height: 48px; border-top-right-radius: 0; border-bottom-right-radius: 0;">
+              <button 
+                class="btn bg-gradient-primary px-4 d-flex align-items-center justify-content-center" 
+                type="submit" 
+                style="height: 48px; border-top-left-radius: 0; border-bottom-left-radius: 0;">
+                Search
+              </button>
+            </div>
+          </form>
           <div class="card">
             <div class="card-header pb-0 p-3">
               <div class="d-flex justify-content-between">
