--- a/templates/task_manager/index.html
+++ b/templates/task_manager/index.html
@@ -101,7 +101,11 @@
                 {% for worker in my_team %}
                 	<li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                   <div class="d-flex align-items-start flex-column justify-content-center">
-                    <h6 class="mb-0 text-sm">{{ worker.username }}</h6>
+                    <h6 class="mb-0 text-sm">
+                      <a href="{% url 'task_manager:worker-detail' pk=worker.id %}">
+                        {{ worker.username }}
+                      </a>
+                    </h6>
                     <p class="mb-0 text-xs">{{ worker.first_name }} {{ worker.last_name }}</p>
                     <p class="mb-0 text-xs text-muted">Position: {{ worker.position.name }}</p>
                     <p class="mb-0 text-xs">Tasks: {{ worker.task_count }}</p>
@@ -136,30 +140,34 @@
                     <p class="mb-4 text-sm">
                       {{ project.description }}
                     </p>
-                    <div class="d-flex align-items-center justify-content-between">
-                      <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Project</button>
-                      <div class="avatar-group mt-2">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <a href="{% url 'task_manager:project-detail' pk=project.id %}" class="btn btn-outline-primary btn-sm mb-0">
+                      View Project
+                    </a>
+                    <div class="d-flex overflow-hidden" style="max-width: 130px;">
+                      <div class="avatar-group flex-nowrap">
                         {% if project.teams.exists %}
-                          {% for team in project.teams.all %}
+                          {% for team in project.teams.all|slice:":4" %}
                             <a href="{% url 'task_manager:team-detail' pk=team.id %}"
-                               class="avatar avatar-xs rounded-circle bg-secondary text-white d-flex align-items-center justify-content-center"
+                               class="avatar avatar-xs rounded-circle bg-secondary text-white d-inline-flex align-items-center justify-content-center me-1"
                                data-bs-toggle="tooltip"
                                data-bs-placement="bottom"
                                title="{{ team }}">
                               {{ team.name|slice:":1"|upper }}
                             </a>
                           {% endfor %}
-                        {% endif %} 
+                        {% endif %}
                       </div>
                     </div>
                   </div>
+                </div>
                 </div>
               </div>
                 {% endfor %}
                 <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
                 <div class="card h-100 card-plain border">
                   <div class="card-body d-flex flex-column justify-content-center text-center">
-                    <a href="javascript:;">
+                    <a href="{% url 'task_manager:project-create' %}">
                       <i class="fa fa-plus text-secondary mb-3"></i>
                       <h5 class=" text-secondary"> New project </h5>
                     </a>
