feat: show user info and profile link in sidebar only when authenticated

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -2,11 +2,15 @@
 
 <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main">
     <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="{% url 'task_manager:worker-detail' pk=user.id %}">
-        <img src="{{ ASSETS_ROOT }}/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">{{ user.username }}</span>
-      </a>
+      {% if user.is_authenticated %}
+        <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+        <a class="navbar-brand m-0" href="{% url 'task_manager:worker-detail' pk=user.id %}">
+          <img src="{{ ASSETS_ROOT }}/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
+          <span class="ms-1 font-weight-bold">{{ user.username }}</span>
+        </a>
+      {% else %}
+        <p>None</p>
+      {% endif %}
     </div>
     <hr class="horizontal dark mt-0">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
@@ -44,7 +48,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% active_startswith request 'worker' %}" href="{% url 'task_manager:worker-list' %}">
+          <a class="nav-link {% active_startswith request 'worker-list' %}" href="{% url 'task_manager:worker-list' %}">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fas fa-user text-dark"></i>
             </div>
@@ -55,12 +59,14 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% active_startswith request 'profile' %}" href="{% url 'task_manager:worker-detail' pk=user.id %}">
-            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="fa-solid fa-address-card text-dark"></i>
-            </div>
-            <span class="nav-link-text ms-1">Profile</span>
-          </a>
+          {% if user.is_authenticated %}
+            <a class="nav-link {% active_startswith request 'worker-detail' %}" href="{% url 'task_manager:worker-detail' pk=user.id %}">
+              <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-address-card text-dark"></i>
+              </div>
+              <span class="nav-link-text ms-1">Profile</span>
+            </a>
+          {% endif %} 
         </li>
       </ul>
     </div>
