fix(team detail): display team name in detail template

--- a/templates/task_manager/team_detail.html
+++ b/templates/task_manager/team_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
   <div class="container-fluid py-4">
+    <h3 class="mb-0">{{ team.name }}</h3>
     <div class="row mt-4">
       <div class="col-sm-6">
         <div class="card h-100">
